--- a/contact.html
+++ b/contact.html
@@ -94,19 +94,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 						<div class="col-md-5">
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-instagram"></i>
+									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">InstagramUsername</a></p>
-								</div>
-							</div>
-
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-facebook2"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><a href="#">Facebook userName</a></p>
+									<p><a href="#" style="color: black;">projectpartnersolution@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -115,25 +106,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<p><a href="#" style="color: black;">+977 9845110786, +977 9813545913</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-
 			<div id="get-in-touch" class="colorlib-bg-color">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 animate-box">
-							<h2>Get in Touch!</h2>
+							<h2>Location</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box">
-							<p class="colorlib-lead">Feel free to get in touch through the contact details provided above.</p>
+							<p class="colorlib-lead">Raniban, Kathmandu, Nepal</p>
 						</div>
 						
 					</div>
