--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3">
 							<p class="colorlib-lead">Raniban, Kathmandu, Nepal</p>
 						</div>
 						
