--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<p class="colorlib-lead">Go through the link below to get in touch with us.</p>
-							<p><a href="#" class="btn btn-primary btn-learn">Contact</a></p>
+							<p><a href="contact.html" class="btn btn-primary btn-learn">Contact</a></p>
 						</div>
 						
 					</div>
