--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#" style="color: black;">projectpartnersolution@gmail.com</a></p>
+									<p><a href="mailto:projectpartnersolution@gmail.com" style="color: black;">projectpartnersolution@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -106,7 +106,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#" style="color: black;">+977 9845110786, +977 9813545913</a></p>
+									<p><a href="tel:+9779845110786" style="color: black;">+977 9845110786</a>
+									<a href="tel:+9779813545913" style="color: black;">+977 9813545913</a></p>
+									
 								</div>
 							</div>
 						</div>
