--- a/work.html
+++ b/work.html
@@ -216,6 +216,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<div class="project" style="background-image: url(images/Joshiniwas/4.PNG);">
 							</div>
 						</div>
+					</div>
 				</div>
 			</div>
 
@@ -241,7 +242,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<div class="project" style="background-image: url(images/KakuKakuShikaJikaBarFairfieldbyMarriott/3.jpg);">
 							</div>
 						</div>
-
+					</div>
 				</div>
 			</div>
 
