removed home section

--- a/index.html
+++ b/index.html
@@ -287,68 +287,10 @@
 				  	</ul>
 			  	</div>
 			</aside>
-
-			<div class="colorlib-about">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="about-img" style="background-image: url(images/DeesBoutiqueHotel/3.jpg);">
-							</div>
-						</div>
-						<div class="col-md-6 " >
-							<div class="about-desc">
-								<span class="heading-meta">Welcome</span>
-								<h2 class="colorlib-heading">We are PREMIUM INTERIOR FIT OUT COMPANY</h2>
-								<p>A Professional Interior Fit out contractor that specializes in delivering superior and long lasting results.</p>
-
-							</div>
-							<div class="row padding">
-								<h2 class="colorlib-heading">Industries we serve</h2>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Residence</h3>
-									</a>
-								</div>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Hospitality</h3>
-									</a>
-								</div>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Commercial</h3>
-									</a>
-								</div>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>F&B</h3>
-									</a>
-								</div>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Office</h3>
-									</a>
-								</div>
-								<div class="col-md-4 no-gutters">
-									<a href="#" class="steps">
-										<p class="icon"><span><i class="icon-check"></i></span></p>
-										<h3>Retail</h3>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 			
 
-			<div id="about-section">
-				<div class="colorlib-about">
+			<div >
+				<div class="colorlib-about" id="about-section">
 					<div class="colorlib-narrow-content">
 						<div class="row row-bottom-padded-md">
 							<div class="col-md-6">
